# tod

./: .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yaml  elixir-mumble-library.txt  flake.nix  makefile  mix.exs  soundoutput.py  test_encoder.exs  test_mumble_audio.exs
examples/: stream_opus.exs
lib/: audio_encoder.ex  media_downloader.ex  mumble_chat.ex  tod.ex
lib/mix/tasks/: protox.gen.ex
lib/mumble_chat/: application.ex  audio.ex  cli.ex  client.ex  messaging.ex  playback_controller.ex  protobuf.ex  protobuf_helper.ex
priv/: Mumble.proto  MumbleUDP.proto
rust/: Cargo.toml
rust/src/: main.rs
test/: audio_streaming_test.exs  tod_test.exs  url_extraction_test.exs
