[package]
name = "rust_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
argparse = "0.2.2"
bytes = "1.10.1"
futures = "0.3.31"
mumble-protocol-2x = "0.6.0"
native-tls = "0.2.14"
tokio = { version = "1.44.2", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.14", features = ["full"] }
